--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -37,3 +37,19 @@ html, body {
   height: 100%;
 }
 
+#sidebar, #content {
+  height: 100vh;
+}
+
+#sidebar {
+  padding-top: 40px;
+  padding-left: 60px;
+  background: theme-color("dark");
+  color: color("white");
+
+  #title {
+    margin-top: 50px;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+  }
+}
