--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -41,6 +41,13 @@ html, body {
   height: 100vh;
 }
 
+.help {
+  * {
+    font-size: 45px;
+    color: theme-color("dark");
+  }
+}
+
 #sidebar {
   padding-top: 40px;
   padding-left: 60px;
