--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -60,3 +60,16 @@ html, body {
     text-transform: uppercase;
   }
 }
+
+#navbar {
+  padding-top: 10px;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 60px;
+  padding-right: 60px;
+
+  #main-logo {
+    width: 190px;
+    height: 90px;
+  }
+}
