Refactor Sidebar Component

--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -48,11 +48,15 @@ html, body {
 }
 
 #sidebar {
-  padding-top: 40px;
-  padding-left: 60px;
+  padding-top: 5px;
   background: theme-color("dark");
   color: color("white");
 
+  #main-logo {
+    width: 70%;
+    padding-left: 60px;
+  }
+  
   #title {
     margin-top: 50px;
     margin-bottom: 10px;
