--- a/frontend/src/core/components/Dashboard/AppNavbar/AppNavbar.scss
+++ b/frontend/src/core/components/Dashboard/AppNavbar/AppNavbar.scss
@@ -3,6 +3,7 @@
   padding-bottom: 15px;
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: flex-end;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 
