--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -95,3 +95,25 @@ html, body {
     padding-top: 5px;
   }
 }
+
+.app-table {
+  thead {
+    background-color: map_get(map_get($table, columns), background-color);
+    color: map_get(map_get($table, columns), color);
+    border: 2px solid transparent;
+
+    th:first-child {
+      border-top-left-radius: 10px;
+      border-top-color: transparent;
+    }
+
+    th:last-child {
+      border-top-right-radius: 10px;
+      border-top-color: transparent;
+    }
+
+    th {
+      border: 0 solid #343A41;
+    }
+  }
+}
