Minor style change

--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -95,3 +95,12 @@ html, body {
     padding-top: 5px;
   }
 }
+
+a.link {
+  color: #343A41;
+  text-decoration: underline;
+}
+
+button, .btn {
+  font-weight: bold;
+}
