--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -167,3 +167,32 @@ button, .btn {
     padding-top: 10px;
   }
 }
+
+.sidebar-menu {
+  list-style-type: none;
+  padding-left: 0;
+  width: 100%;
+
+
+  a {
+    color: #ffffff;
+    display: block;
+    font-size: 1.2em;
+
+    li {
+      display: flex;
+      align-items: center;
+      padding-left: 30px;
+      padding-top: 20px;
+      padding-bottom: 20px;
+
+      .icon {
+        margin-right: 20px;
+      }
+    }
+  }
+
+  a:hover {
+    text-decoration: none;
+  }
+}
