--- a/frontend/src/views/User/ProfileSidebar/ProfileSidebar.scss
+++ b/frontend/src/views/User/ProfileSidebar/ProfileSidebar.scss
@@ -4,6 +4,10 @@
   background-color: #c2c2c2;
 
   a:hover {
+    background-color: #808080;
+  }
+
+  a.active {
     background-color: #666666;
   }
 }
