Add styling and go to profile

--- a/frontend/src/core/components/DefaultLayout/LoginStatus/LoginStatus.scss
+++ b/frontend/src/core/components/DefaultLayout/LoginStatus/LoginStatus.scss
@@ -22,3 +22,18 @@
     align-self: center;
   }
 }
+
+.user-dropdown {
+
+  .dropdown-item {
+    display: flex;
+    align-items: center;
+    padding-left: 15px;
+    padding-right: 15px;
+
+    .icon {
+      color: gray;
+      margin-right: 15px;
+    }
+  }
+}
