--- a/frontend/src/views/Dashboard/Dashboard.scss
+++ b/frontend/src/views/Dashboard/Dashboard.scss
@@ -15,8 +15,9 @@
     }
   }
 
-  .table {
+  .react-bootstrap-table {
     max-height: 55vh;
-    overflow-y: scroll;
+    overflow: hidden;
+    overflow-y: auto;
   }
 }
