--- a/frontend/src/core/components/DefaultLayout/AppNavbar/AppNavbar.scss
+++ b/frontend/src/core/components/DefaultLayout/AppNavbar/AppNavbar.scss
@@ -5,14 +5,14 @@
   flex-direction: row;
   align-items: center;
   justify-content: flex-end;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+  box-shadow: 0px -12px 21px 1px rgba(0, 0, 0, 0.4);
 
   >* {
     margin-right: 20px;
   }
 
   >:last-child {
-    margin-right: 50px;
+    margin-right: 40px;
   }
 
 }
