--- a/frontend/src/core/components/DefaultLayout/AppSidebar/AppSidebar.scss
+++ b/frontend/src/core/components/DefaultLayout/AppSidebar/AppSidebar.scss
@@ -2,10 +2,10 @@
 
 #app-sidebar {
   a:hover {
-    background-color: #2d3239;
+    background-color: #007293;
   }
 
   a.active {
-    background-color: #262a30;
+    background-color: #006480;
   }
 }
