--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -18,6 +18,7 @@ $table: (
 
 // color variables: 
 $primary-color: #37aee1;
+$secondary-color: #474747;
 
 // Font variables
 $title: (
@@ -35,6 +36,8 @@ $paragraph: (
 // utils variables
 $default-border-radius: 25px;
 
+$gradient: linear-gradient(180deg, rgba(32,141,188,1) 12%, rgba(0,50,66,1) 88%);
+
 @mixin font-style($type) {
   font-family: map_get($type, font), map_get($type, type);
   font-weight: map_get($type, weight);
@@ -47,8 +50,13 @@ $default-border-radius: 25px;
   }
 }
 
-h1, h2 {
-  color: $primary-color;
+h1 {
+  font-size: 2em;
+  color: $secondary-color;
+}
+
+h2 {
+  color: $primary-color
 }
 
 // Paragraphs, Labels, Links
@@ -62,6 +70,7 @@ html, body {
 }
 
 button, .btn {
+  min-width: 180px;
   font-weight: 400;
   border-radius: $default-border-radius;
   font-family: "Lato";
@@ -69,10 +78,12 @@ button, .btn {
 
 .btn-primary {
   background-color: $primary-color;
+  border-color: $primary-color;
 }
 
 .btn-dark {
-  background-color: #474747;
+  background-color: $secondary-color;
+  border-color: $secondary-color;
 }
 
 #sidebar, #content {
@@ -81,13 +92,8 @@ button, .btn {
 
 #sidebar {
   padding-top: 5px;
-  background: theme-color("dark");
+  background: $gradient;
   color: color("white");
-
-  #main-logo {
-    width: 70%;
-    padding-left: 60px;
-  }
 
   #title {
     margin-top: 50px;
@@ -196,3 +202,33 @@ a.link {
     text-decoration: none;
   }
 }
+
+/* Custom scroll bar. Not supports in Firefox and IE */
+
+/* total width */
+::-webkit-scrollbar {
+    background-color:#fff;
+    width:16px
+}
+
+/* background of the scrollbar except button or resizer */
+::-webkit-scrollbar-track {
+    background-color:#fff
+}
+::-webkit-scrollbar-track:hover {
+    background-color:#f4f4f4
+}
+
+/* scrollbar itself */
+::-webkit-scrollbar-thumb {
+    background-color:#ceced4;
+    border-radius:16px;
+    border:5px solid #fff
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color:#a5a5ac;
+    border:4px solid #f4f4f4
+}
+
+/* set button(top and bottom of the scrollbar) */
+::-webkit-scrollbar-button {display:none}
