Refactor LabelToggle and UI changes

--- a/frontend/src/core/components/PocketElementCard/PocketElementCard.scss
+++ b/frontend/src/core/components/PocketElementCard/PocketElementCard.scss
@@ -37,7 +37,7 @@
         }
 
         p:last-of-type {
-          color: #848c94;
+          color: #c0c7ce;
           margin-top: -5px;
         }
       }
