--- a/frontend/src/core/components/DefaultLayout/AppSidebar/AppSidebar.scss
+++ b/frontend/src/core/components/DefaultLayout/AppSidebar/AppSidebar.scss
@@ -1,6 +1,18 @@
 @import "../../../../scss/Core.scss";
 
 #app-sidebar {
+  margin-top: 50px;
+
+  a {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  a>li {
+    margin-left: 20px;
+    font-weight: bold;
+  }
+
   a:hover {
     background-color: #007293;
   }
