--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -1,42 +1,32 @@
 @import "node_modules/bootstrap/scss/bootstrap";
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300,400;1,300&family=Open+Sans:wght@400;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap');
 
 // Table variables
-$table: (
-  columns:(
-    background-color: theme-color("dark"),
-    color: white
-  ),
-  data: (
-    odd: "",
+$table: (columns:(background-color: theme-color("dark"),
+    color: white),
+  data: (odd: "",
     even:""
   ),
-  selected-item: (
-    background-color: rgba(0, 0, 0, 0.075)
-  )
-);
+  selected-item: (background-color: rgba(0, 0, 0, 0.075)));
 
 // color variables: 
 $primary-color: #37aee1;
+$primary-color-darker: #1e95c8;
 $secondary-color: #474747;
 
 // Font variables
-$title: (
-  font:"Open Sans",
+$title: (font:"Open Sans",
   type: sans-serif,
-  weight:800
-);
+  weight:800);
 
-$paragraph: (
-  font:"Lato",
+$paragraph: (font:"Lato",
   type: sans-serif,
-  weight:400
-);
+  weight:400);
 
 // utils variables
 $default-border-radius: 25px;
 
-$gradient: linear-gradient(180deg, rgba(32,141,188,1) 12%, rgba(0,50,66,1) 88%);
+$gradient: linear-gradient(180deg, rgba(32, 141, 188, 1) 12%, rgba(0, 50, 66, 1) 88%);
 
 @mixin font-style($type) {
   font-family: map_get($type, font), map_get($type, type);
@@ -60,25 +50,69 @@ h2 {
 }
 
 // Paragraphs, Labels, Links
-label, p, a {
+label,
+p,
+a {
   @include font-style($paragraph);
 }
 
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
-button, .btn {
+button,
+.btn {
   min-width: 180px;
   font-weight: 400;
   border-radius: $default-border-radius;
   font-family: "Lato";
 }
 
+form {
+
+  input,
+  textarea {
+    border-color: $primary-color;
+  }
+
+  input {
+    border-radius: $default-border-radius !important;
+  }
+
+  textarea {
+    border-radius: 15px !important;
+  }
+}
+
+.input-group {
+  input.form-control {
+    border-color: $primary-color !important;
+    border-top-left-radius: $default-border-radius;
+    border-bottom-left-radius: $default-border-radius;
+  }
+}
+
+.input-group-append {
+  button {
+    min-width: auto;
+  }
+}
+
+.btn-primary,
+.btn-outline-primary {
+  border-color: $primary-color;
+}
+
 .btn-primary {
   background-color: $primary-color;
-  border-color: $primary-color;
+}
+
+.btn-outline-primary:hover,
+.btn-primary:hover {
+  background-color: $primary-color-darker;
+  border-color: $primary-color-darker;
 }
 
 .btn-dark {
@@ -86,7 +120,12 @@ button, .btn {
   border-color: $secondary-color;
 }
 
-#sidebar, #content {
+input {
+  border-radius: $default-border-radius;
+}
+
+#sidebar,
+#content {
   min-height: 100vh;
 }
 
@@ -145,8 +184,8 @@ a.link {
 
 // Spinner Loader
 .css-1skdk9r {
-    display: block;
-    margin: 0 auto;
+  display: block;
+  margin: 0 auto;
 }
 
 .stats {
@@ -203,32 +242,48 @@ a.link {
   }
 }
 
+.search-input.input-group {
+  input {
+    border-right-color: rgba(194, 194, 194, 0.5) !important;
+
+  }
+
+  button {
+    color: $primary-color;
+    border-left-color: rgba(194, 194, 194, 0.5);
+  }
+}
+
 /* Custom scroll bar. Not supports in Firefox and IE */
 
 /* total width */
 ::-webkit-scrollbar {
-    background-color:#fff;
-    width:16px
+  background-color: #fff;
+  width: 16px
 }
 
 /* background of the scrollbar except button or resizer */
 ::-webkit-scrollbar-track {
-    background-color:#fff
+  background-color: #fff
 }
+
 ::-webkit-scrollbar-track:hover {
-    background-color:#f4f4f4
+  background-color: #f4f4f4
 }
 
 /* scrollbar itself */
 ::-webkit-scrollbar-thumb {
-    background-color:#ceced4;
-    border-radius:16px;
-    border:5px solid #fff
+  background-color: #ceced4;
+  border-radius: 16px;
+  border: 5px solid #fff
 }
+
 ::-webkit-scrollbar-thumb:hover {
-    background-color:#a5a5ac;
-    border:4px solid #f4f4f4
+  background-color: #a5a5ac;
+  border: 4px solid #f4f4f4
 }
 
 /* set button(top and bottom of the scrollbar) */
-::-webkit-scrollbar-button {display:none}
+::-webkit-scrollbar-button {
+  display: none
+}
