--- a/frontend/src/core/components/PocketElementCard/PocketElementCard.scss
+++ b/frontend/src/core/components/PocketElementCard/PocketElementCard.scss
@@ -1,7 +1,8 @@
 @import "../../../scss/Core.scss";
 
 .p-card {
-  margin: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding: 10px;
   border: 1px solid rgba(0, 0, 0, .125);
   border-radius: 5px;
