--- a/frontend/src/core/components/Segment/Segment.scss
+++ b/frontend/src/core/components/Segment/Segment.scss
@@ -1,6 +1,8 @@
+@import "../../../scss/Core.scss";
+
 .app-segment {
   .head {
-    background-color: #f5f5f5;
+    background-color: $light-gray;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
     display: flex;
