Refactor segment component

--- a/frontend/src/core/components/Notification/Notifications.scss
+++ b/frontend/src/core/components/Notification/Notifications.scss
@@ -7,9 +7,16 @@
     left: 40px;
     bottom: 0;
   }
+
+  .dropdown-item {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .notification {
+  margin-left: 15px;
+
   p {
     margin-bottom: 0;
   }
