--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -168,6 +168,9 @@ input {
   padding-top: 5px;
   padding-bottom: 5px;
   font-weight: 300;
+}
+
+.badge.badge-primary {
   background-color: $primary-color;
 }
 
