--- a/frontend/src/views/Dashboard/Dashboard.scss
+++ b/frontend/src/views/Dashboard/Dashboard.scss
@@ -1,17 +1,16 @@
 #dashboard {
   .dropdown.cta {
     button {
+      padding-left: 150px;
       border-right: 1px solid #ffffff;
+    }
+
+    .dropdown-item {
+      padding-right: 130px;
     }
 
     button.dropdown-toggle {
       border-left: 1px solid #ffffff;
     }
-  }
-
-  .react-bootstrap-table {
-    max-height: 55vh;
-    overflow: hidden;
-    overflow-y: auto;
   }
 }
