--- a/frontend/src/core/components/InfoCard/InfoCard.scss
+++ b/frontend/src/core/components/InfoCard/InfoCard.scss
@@ -4,7 +4,7 @@
   margin: 10px;
   padding: 10px;
   border-radius: 5px;
-  box-shadow: 1px 15px 53px -26px rgba(33, 33, 33, .1);
+  box-shadow: $default-box-shadow;
   display: flex;
   flex-direction: column;
   justify-content: center;
