Add validation to create app/node

--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -356,6 +356,10 @@ button.link {
   }
 }
 
+.invalid-feedback {
+  margin-left: 10px;
+}
+
 /* Custom scroll bar. Not supports in Firefox and IE */
 
 /* total width */
