Add naming and minor layout changes

--- a/frontend/src/core/components/DefaultLayout/AppNavbar/AppNavbar.scss
+++ b/frontend/src/core/components/DefaultLayout/AppNavbar/AppNavbar.scss
@@ -6,6 +6,7 @@
   align-items: center;
   justify-content: space-between;
   box-shadow: 0px -12px 21px 1px rgba(0, 0, 0, 0.4);
+  height: 10vh;
 
   #main-logo {
     width: 7%;
