--- a/frontend/src/core/components/Segment/Segment.scss
+++ b/frontend/src/core/components/Segment/Segment.scss
@@ -2,7 +2,7 @@
 
 .app-segment {
   .head {
-    background-color: $light-gray;
+    background-color: $white-smoke;
     border-top-right-radius: 15px;
     border-top-left-radius: 15px;
     display: flex;
