--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -13,11 +13,19 @@ $table: (columns: (background-color: theme-color("dark"),
 );
 
 // color variables:
-$primary-color: #37aee1;
+// Primary colors
+$primary-color: #27a9e0;
 $primary-color-darker: #1e95c8;
+$dark-blue: #06022e;
+
+// Secondary-colors
 $secondary-color: #474747;
-$dark-blue: #00212d;
-$light-gray: #f5f5f5;
+$dark-gray: #474747;
+$light-gray: #afafaf;
+$white-smoke: #f5f5f5;
+
+$error: #bb0505;
+$alert: #ffbf02;
 
 // Font variables
 $title: (font: "Open Sans",
@@ -34,8 +42,8 @@ $paragraph: (font: "Lato",
 $default-border-radius: 25px;
 
 $gradient: linear-gradient(180deg,
-  rgba(32, 141, 188, 1) 12%,
-  rgba(0, 50, 66, 1) 88%);
+  rgba(6, 32, 46, 1) -20%,
+  rgba(37, 169, 224, 1) 110%);
 
 @mixin font-style($type) {
   font-family: map_get($type, font), map_get($type, type);
@@ -191,7 +199,7 @@ input {
 
 #sidebar,
 #content {
-  min-height: 100vh;
+  min-height: 90vh;
 }
 
 #sidebar {
@@ -335,6 +343,11 @@ button.link {
   a:hover {
     text-decoration: none;
   }
+}
+
+#default-layout {
+  max-height: 90vh;
+  overflow-x: auto;
 }
 
 .search-input.input-group {
