Changing components to UI changes

--- a/frontend/src/core/components/DefaultLayout/BreadCrumb/BreadCrumb.scss
+++ b/frontend/src/core/components/DefaultLayout/BreadCrumb/BreadCrumb.scss
@@ -1,8 +1,14 @@
+@import "../../../../scss/Core.scss";
+
 #breadcrumbs {
-  font-weight: 300;
+  font-weight: 400;
   font-family: "Open Sans";
 
   .breadcrumb {
     background-color: transparent;
+
+    li {
+      color: $dark-gray;
+    }
   }
 }
