--- a/frontend/src/core/components/AuthSidebar/AuthSidebar.scss
+++ b/frontend/src/core/components/AuthSidebar/AuthSidebar.scss
@@ -1,8 +1,9 @@
 #auth-sidebar {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+  // height: auto;
+  margin-top: 35%;
 
   h1 {
     color: #ffffff;
@@ -15,6 +16,6 @@
   }
 
   .row:last-of-type {
-    padding-bottom: 135px;
+    padding-bottom: 350px;
   }
 }
