--- a/frontend/src/scss/Auth.scss
+++ b/frontend/src/scss/Auth.scss
@@ -1,7 +1,39 @@
 @import "Core";
 
 .auth-page {
+  h2 {
+    font-size: 30px;
+    margin-bottom: 1em;
+  }
+
+  #sidebar {
+    height: 100vh;
+  }
+
+  .form-group.password {
+    margin-bottom: 0.5em;
+  }
+
+  .invalid-feedback {
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+  #sidebar.col-lg-3.col-sm-3.col-4 {
+    flex: 1 0 25%;
+    max-width: 30%;
+    background: url("/assets/auth-sidebar.png");
+    background-size: cover;
+  }
+
+  #logo-white {
+    width: 28%;
+    margin-top: 30px;
+    margin-left: 40px;
+  }
+
   .content {
+
     p,
     a {
       font-weight: 300;
@@ -12,7 +44,7 @@
 
     .change {
       margin-top: 50px;
-      margin-bottom: 50px;
+      margin-bottom: 20vh;
       margin-right: 30px;
       display: flex;
       justify-content: flex-end;
@@ -29,6 +61,9 @@
       }
 
       #provider-buttons {
+        display: flex;
+        justify-content: space-between;
+
         * {
           margin-top: 5px;
           margin-bottom: 5px;
@@ -37,13 +72,11 @@
         .brand svg {
           margin: 0;
         }
-      }
 
-      #main-form {
-        div:last-child {
-          margin-top: 10px;
-          text-align: center;
+        button {
+          font-size: 17px;
         }
+
       }
     }
   }
