--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -23,6 +23,7 @@ $secondary-color: #474747;
 $dark-gray: #474747;
 $light-gray: #afafaf;
 $white-smoke: #f5f5f5;
+$border-blue: #25a9e0;
 
 $error: #bb0505;
 $alert: #ffbf02;
@@ -211,6 +212,11 @@ input {
     font-weight: 300;
     font-family: "Lato";
   }
+}
+
+.form-control {
+  border: 1px solid $border-blue;
+  height: calc(1.5em + 1.00rem + 2px);
 }
 
 label.form-label {
@@ -421,8 +427,15 @@ button.link {
   margin-left: 25px !important;
 }
 
+.form-control.is-invalid {
+  border-color: $border-blue;
+}
+
 .invalid-feedback {
   margin-left: 10px;
+  text-align: right;
+  padding-right: 10px;
+  color: #fc635f;
 }
 
 /* Custom scroll bar. Not supports in Firefox and IE */
