--- a/frontend/src/views/Auth/VerifyEmail/VerifyEmail.scss
+++ b/frontend/src/views/Auth/VerifyEmail/VerifyEmail.scss
@@ -1,10 +1,25 @@
 #verify-email-page {
 
   h1 {
-    font-size: 30px;
+    font-size: 2.5em;
+    text-transform: uppercase;
+  }
+
+  h2 {
+    font-size: 1.7em;
+    margin-bottom: 0;
+  }
+
+  p {
+    font-size: 1.1em;
+    font-weight: 300;
   }
 
   #main {
     margin-top: 40px;
+  }
+
+  .content {
+    margin-top: 8em;
   }
 }
