--- a/frontend/src/views/Auth/ForgotPassword/ForgotPassword.scss
+++ b/frontend/src/views/Auth/ForgotPassword/ForgotPassword.scss
@@ -1,14 +1,42 @@
+@import "../../../scss/Core.scss";
+
 #forgot-password-page {
   #main {
-    padding-top: 5%;
-
     h1 {
-      font-size: 22px;
+      font-size: 2.5em;
+    }
+
+    p {
+      font-size: 1.2em;
+    }
+
+    #email-label {
+      font-size: 1.1em;
+    }
+
+    .head {
+      margin-left: -20px;
+      background: $primary-color;
+      display: block;
+      width: 800px;
+      height: 400px;
+      border-radius: 15px;
+    }
+
+    .wrapper {
+      box-shadow: 1px 2px 22px 2px rgba(33, 33, 33, 0.1);
+      border-radius: 15px;
+      background-color: #ffffff;
+      width: 700px;
+      top: -100px;
+      padding: 150px 60px 50px 60px;
+      position: relative;
+      left: 30px;
     }
   }
 
-  button,
-  input {
-    height: 55px;
+  #main.offset-lg-3 {
+    margin-left: 30%;
   }
+
 }
