Add reset password and changes to UI

--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -260,7 +260,8 @@ label.form-label {
   padding-right: 60px;
 
   #main-logo {
-    width: 190px;
+    margin-top: 10px;
+    width: 17%;
     height: 90px;
   }
 
