--- a/frontend/src/core/PocketBox/PocketBox.scss
+++ b/frontend/src/core/PocketBox/PocketBox.scss
@@ -20,21 +20,22 @@
     border-radius: 15px;
   }
 
+  #img {
+    left: 200px;
+    width: 42%;
+    position: relative;
+    top: 6px;
+    z-index: 1;
+  }
+
   .wrapper {
     box-shadow: 1px 2px 22px 2px rgba(33, 33, 33, 0.1);
     border-radius: 15px;
     background-color: #ffffff;
     width: 700px;
     top: -110px;
-    padding: 150px 60px 50px 60px;
+    padding: 100px 60px 50px 60px;
     position: relative;
     left: 30px;
-
-    #img {
-      left: 200px;
-      width: 42%;
-      position: absolute;
-      bottom: 310px;
-    }
   }
 }
