--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -467,11 +467,17 @@ button.link {
   border-color: $border-blue;
 }
 
-.invalid-feedback {
+.invalid-feedback,
+.error {
   margin-left: 10px;
-  text-align: right;
   padding-right: 10px;
   color: #fc635f;
+  font-size: 16px;
+  font-weight: bold !important;
+}
+
+.invalid-feedback {
+  text-align: right;
 }
 
 .text {
