--- a/frontend/src/scss/Core.scss
+++ b/frontend/src/scss/Core.scss
@@ -1,5 +1,5 @@
 @import "node_modules/bootstrap/scss/bootstrap";
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&family=Open+Sans:ital,wght@0,400;0,800;1,300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Open+Sans:wght@300;400;700;800&display=swap");
 
 // Table variables
 $table: (columns: (background-color: theme-color("dark"),
@@ -25,13 +25,13 @@ $light-gray: #afafaf;
 $white-smoke: #f5f5f5;
 $border-blue: #25a9e0;
 
-$error: #bb0505;
+$error: #ff0000;
 $alert: #ffbf02;
 
 // Font variables
 $title: (font: "Open Sans",
   type: sans-serif,
-  weight: 800,
+  weight: 700,
 );
 
 
@@ -73,7 +73,7 @@ $gradient: linear-gradient(180deg,
 }
 
 h1 {
-  color: $secondary-color;
+  color: black;
 }
 
 // Paragraphs, Labels, Links
@@ -210,7 +210,7 @@ input {
   @for $i from 1 through 6 {
     h#{$i} {
       font-weight: bold;
-      color: #fa5849;
+      color: $error;
     }
   }
 }
@@ -219,7 +219,7 @@ input {
   @for $i from 1 through 6 {
     h#{$i} {
       font-weight: bold;
-      color: #e6ad3a;
+      color: $alert;
     }
   }
 }
