UI fixes on signup page

--- a/frontend/src/core/components/AuthSidebar/AuthSidebar.scss
+++ b/frontend/src/core/components/AuthSidebar/AuthSidebar.scss
@@ -5,10 +5,12 @@
     color: #ffffff;
     line-height: 1;
     margin-bottom: 25px;
+    font-weight: 700;
   }
 
   p {
-    font-size: 18px;
+    font-size: 14px;
+    letter-spacing: -0.38px;
   }
 
   .row:last-of-type {
